--- a/style.css
+++ b/style.css
@@ -1,9 +1,20 @@
 
 body {
 font-family: sans-serif;
+line-height: 1.5em;
 }
 
 .figure {
 text-align:center;
 margin:2em auto;
-};
+font-weight:bold;
+}
+
+input {
+margin: 0.25em;
+padding: 0.5em;
+}
+
+h2 {
+margin-top: 2em;
+}
